--- a/test/test1.html
+++ b/test/test1.html
@@ -1,4 +1,11 @@
 <html>
+    <head>
+        <style>
+            p { display: none }
+            body p big { display: none }
+            small { display: none }
+        </style>
+    </head>
     <body>
         <small> elemento Small </small>
         <p> 
