--- a/test/test2.html
+++ b/test/test2.html
@@ -1,4 +1,9 @@
 <html>
+    <head>
+        <style>
+            big {display: none}
+        </style>
+    </head>
     <body>
         <small> elemento Small </small>
         <big> elemento Big1 </big>
