--- a/test/test3.html
+++ b/test/test3.html
@@ -1,4 +1,10 @@
 <html>
+    <head>
+        <style>
+            small {display: none}
+            big   {display: none}
+        </style>
+    </head>
     <body>
     <h1>title</h1>
     <p>
