--- a/test/test1.html
+++ b/test/test1.html
@@ -1,9 +1,7 @@
 <html>
     <head>
         <style>
-            p { display: none }
-            body p big { display: none }
-            small { display: none }
+            * { display: none }
         </style>
     </head>
     <body>
