adding support to div tag

--- a/test/test1.html
+++ b/test/test1.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <style>
-            * { display: none }
+            p small { display: none }
         </style>
     </head>
     <body>
