--- a/test/test4.html
+++ b/test/test4.html
@@ -1,13 +1,13 @@
 <html>
     <head>
         <style>
-            body > div p { display: none }
+            body div p {display: none}
         </style>
     </head>
     <body>
         <div> <div>
-            <div>div</div>
-            <div>div</div>
+            <div>text</div>
+            <div>text</div>
             <div>
                 <p> texto </p>
                 <p> texto </p>
