--- a/test/test1.html
+++ b/test/test1.html
@@ -1,7 +1,9 @@
 <html>
     <head>
         <style>
-            p small { display: none }
+            body > p big { display: none }
+            html head {display: none}
+            body > big {display: none}
         </style>
     </head>
     <body>
