fixed sibling selector

--- a/test/test1.html
+++ b/test/test1.html
@@ -1,15 +1,13 @@
 <html>
     <head>
         <style>
-            body > p big { display: none }
-            html head {display: none}
-            body > big {display: none}
+            big + big + small {display: none}
         </style>
     </head>
     <body>
         <small> elemento Small </small>
         <p> 
-            <small> small </small>
+            <big> small </big>
             <big>   Big1  </big>
             <small> small </small>
         </p>
