--- a/test/test4.html
+++ b/test/test4.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <style>
-            html body div * {display: none}
+            html body div + div * {display: none}
         </style>
     </head>
     <body>
